# AI-tax-assistant

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_app.py  run_tests.py
.github/: pull_request_template.md
.github/workflows/: hosted-smoke.yml  live-s3-integration.yml  rule-regression.yml
docs/: API_CONTRACT.md  DEPLOYMENT.md  FREETAXUSA_MAPPING_SPEC.md  IMPLEMENTATION_PLAN.md  SUBAGENT_PROMPTS.md  TAX_RULE_CONSISTENCY_CHECKLIST.md
scripts/: hosted_smoke.py
tax_assistant/: config.py  db.py  deps.py  main.py  models.py  schemas.py
tax_assistant/api/: routes.py
tax_assistant/services/: auth_service.py  confidence_service.py  document_service.py  export_service.py  extraction_service.py  freetaxusa_mapping.py  optimization_service.py  retention_service.py  rules_engine.py  storage_service.py
tax_assistant/static/: app.js  index.html  styles.css
tests/: conftest.py  test_api_workflows.py  test_e2e_workflows.py  test_s3_integration_live.py  test_service_logic.py
